add some more stuff

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         <div class="favThings">
           <div class="form-group">
             <label for="food">food?</label>
-            <input id="food" placeholder="(food)" class="form-control">
+            <input id="food" placeholder="type about that food here" class="form-control">
           </div>
           <div class="form-group">
             <label for="movie">movie?</label>
-            <input id="movie" placeholder="(movie)" class="form-control">
+            <input id="movie" placeholder="type about that movie here" class="form-control">
           </div>
           <div class="form-group">
             <label for="music">music?</label>
-            <input id="music" placeholder="(music)" class="form-control">
+            <input id="music" placeholder="type about that music here please" class="form-control">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" name="button">Submit</button>
         </form>
       </div>
 
